plants/proxy/envoy-dev.yaml
admin:
  access_log_path: /tmp/admin_access.log
  profile_path: /tmp/envoy.prof
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: default
                  virtual_hosts:
                    - name: plantdex_plants-app-dev
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: plantdex_plants-app-dev }
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: plantdex_plants-app-dev
      connect_timeout: 15s
      type: logical_dns
      dns_lookup_family: v4_only
      load_assignment:
        cluster_name: plantdex_plants-app-dev
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      { address: plantdex_plants-app-dev, port_value: 4040 }
