plants/proxy/envoy-prod.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: plants-app-prod
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: plants-app-prod }
                http_filters:
                  - name: envoy.filters.http.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  certificate_chain:
                    filename: "/etc/tls/fullchain.pem"
                  private_key:
                    filename: "/etc/tls/privkey.pem"
                alpn_protocols: ["h2"]
                tls_params:
                  tls_minimum_protocol_version: "TLSv1_3"

  clusters:
    - name: plants-app-prod
      connect_timeout: 10s
      type: logical_dns
      dns_lookup_family: v4_only
      lb_policy: round_robin
      load_assignment:
        cluster_name: plants-app-prod
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: plants-app-prod
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: plants-app-prod
